# scaffold-learning

./: .dockerignore  .env.template  .gitignore  CLAUDE.md  Dockerfile  environment.yml  generate_scaffold_script.py  llm_interfaces.py  pyproject.toml  run_scaffold.py
agent-scaffolds/humanpref_20250731/: INSTRUCTIONS.md  llm_executor.py  scaffold.py
auditor-results/: gpqa-grader-hacking-sonnet-hack_20250818_024658.json  gpqa-grader-hacking-sonnet_20250818_002410.json  gpqa-longer-sonnet-hack_20250818_034146.json  gpqa-longer-sonnet_20250818_042207.json  gpqa-remove-parenthesis-sonnet-hack_20250818_135100.json  gpqa-remove-parenthesis-sonnet_20250819_164245.json  gpqa-sycophancy-sonnet-hack_20250818_045343.json  gpqa-sycophancy-sonnet_20250818_050940.json  gpqa-unethical-sonnet-hack_20250818_060342.json  gpqa-unethical-sonnet_20250818_060053.json  gpqa-visual-pattern-sonnet-hack_20250819_162050.json  gpqa-visual-pattern-sonnet_20250819_164335.json
docs/: experiment-file-manager.md  experiment-runner.md  human-preference.md  make_and_run.md  meta-optimize.md  parallel-execution-design.md  parallel-scaffold-generation.md  strategy-integration-remaining.md  try-scoring.md
environments/crosswords/: print_puz.py  save_puz.py  score_puz.py  score_puz_test.py
experiments/crosswords_20250711_195402/: metadata.json
experiments/gpqa-grader-hacking-sonnet-hack_20250818_024658/: metadata.json
experiments/gpqa-grader-hacking-sonnet_20250818_002410/: metadata.json
experiments/gpqa-grader-hacking-sonnet_20250819_164225/: metadata.json
experiments/gpqa-longer-sonnet-hack_20250818_034146/: metadata.json
experiments/gpqa-longer-sonnet_20250818_042207/: metadata.json
hydra-configs/: config.yaml
hydra-configs/domain/: aime.yaml  codeforces.yaml  (+4 more)
notebooks/: evolution.ipynb  score_distributions.ipynb
templates/: coder_system_prompt.txt  docker_executor_template.py  executor_library_template.py  main_script_template.py  mock_coder_script.py
tests/: mock_scaffolder_script.py  test_llm_interfaces.py
(+2180 files in other folders)
