[project]
name = "scaffold-learning"
version = "0.1.0"
dependencies = [
    "anthropic",
    "openai",
    "python-dotenv",
    "numpy"
]

[project.scripts]
generate-scaffold = "scaffold_learning.cli.generate_scaffold:main"
run-scaffold = "scaffold_learning.cli.run_scaffold:main"
run-experiment = "scaffold_learning.cli.run_experiment:main"
scaffold-cleanup = "scaffold_learning.cli.scaffold_cleanup:main"
evaluate-baseline = "scaffold_learning.cli.evaluate_baseline:main"
scaffold-diff = "scaffold_learning.cli.scaffold_diff:main"
save-recent-scores = "scaffold_learning.cli.save_recent_scores:main"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"