[project]
name = "scaffold-learning"
version = "0.1.0"
dependencies = [
    "anthropic",
    "openai",
    "python-dotenv"
]

[project.optional-dependencies]
dev = [
    "numpy",
    "datasets>=2.0.0",
    "pytest"
]
reward-models = [
    "torch>=2.6.0",
    "transformers>=4.30.0",
    "flask>=2.0.0"
]
analysis = [
    "pandas",
    "matplotlib",
    "seaborn",
    "networkx",
    "jupyter",
    "numpy",
    "plotly"
]

[project.scripts]
scaffold = "scaffold_learning.cli.make_and_run:main"
run-experiment = "scaffold_learning.cli.run_experiment:main"
scaffold-cleanup = "scaffold_learning.cli.scaffold_cleanup:main"
scaffold-diff = "scaffold_learning.cli.scaffold_diff:main"
save-recent-scores = "scaffold_learning.cli.save_recent_scores:main"
llm-prompt = "scaffold_learning.cli.llm_prompt:main"
loan-bias-test = "scaffold_learning.cli.loan_bias_test:main"
try-scoring = "scaffold_learning.cli.try_scoring:main"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"